
2019-03-19  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use of COB_MAX_NAMELEN

2018-07-16  Brian Tiffin <btiffin@gnu.org>

	* Makefile.am: add cob-config.1 to dist_man

2018-06-16  Ludwin Janvier <lud.janvier@gmail.com>

	* cob-config.1: added minimal manpage for cob-config

2018-06-04  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: remove path output when creating manpage

2018-03-05  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (maintainer-clean): remove generated manpage

2018-02-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: renamed -runtime-conf to -runtime-config

2018-01-23  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (process_command_line): added missing arg shift for --brief/-q

2018-01-19  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (main): raise explicit error if called without any PROGRAM
	  name given
	* cobcrun.c (cobcrun_initial_module): removed code parts for extending
	  environment options where not needed

2017-12-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (main): use of cob_resolve_cobol instead of cob_resolve
	  as we want its error handling in any case

2017-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c [_WIN32]: added missing headers
	* cobcrun.c (cobcrun_split_path_file): no trailing slash for pathname

2017-11-21  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c [_WIN32]: allowing tests to result in the expected line
	  ending for messages returned from cobcrun.c directly

2017-11-15  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use (cob_init_nomain) instead of (cob_init) as it includes
	  no functions intended for COBOL use (speedup + workaround ltdl leak)

2017-11-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: check missing evaluation of command line option;
	  fixed printing newline to stderr instead of stdout;
	  code-coverage specific changes

2017-10-22  Simon Sobisch <simonsobisch@gnu.org>
