@@ -38,6 +38,8 @@
 #include <fcntl.h>
 #endif
 
+/* Don't include gmp.h */
+#define COB_WITHOUT_DECIMAL
 #include "libcob.h"
 #include "tarstamp.h"
 
