@@ -105,9 +105,9 @@
 
 #include "lib/gettext.h"
 
-/* Force symbol exports */
+/* Force symbol exports, don't include gmp.h here (done above) */
 #define	COB_LIB_EXPIMP
-
+#define COB_WITHOUT_DECIMAL
 #include "libcob.h"
 #include "coblocal.h"
 
