@@ -99,9 +99,9 @@
 
 #endif	/* _WIN32 */
 
-/* Force symbol exports */
+/* Force symbol exports, don't include gmp.h */
 #define	COB_LIB_EXPIMP
-
+#define COB_WITHOUT_DECIMAL
 #include "libcob.h"
 #include "coblocal.h"
 
