@@ -33,9 +33,9 @@
 #endif
 #include <time.h>
 
-/* Force symbol exports */
+/* Force symbol exports, don't include gmp.h */
 #define	COB_LIB_EXPIMP
-
+#define COB_WITHOUT_DECIMAL
 #include "libcob.h"
 #include "coblocal.h"
 
