@@ -3,6 +3,10 @@
 
 	* common.c: definition of COB_MAX_NAMELEN
 	* common.c: use of COB_MAX_NAMELEN, including sanity check
+	* mlio.c, numeric.c, common.h: moved duplicated code from mlio.c
+	  to numeric.c as separate function cob_decimal_set_field_to_uint
+	* coblocal.h [COB_WITHOUT_DECIMAL]: allow inclusion without gmp header
+	* general: suppressed inclusion of gmp.h where not necessary
 
 2019-03-15  Simon Sobisch <simonsobisch@gnu.org>
 
